src/style.css
/* ... */
.jumbotron h1 {
    color: #d32323;
    -webkit-text-stroke: #FFFFFF 1px;
    text-shadow:
        1px 1px 0 #FFF,
        -1px -1px 0 #FFF,
        1px -1px 0 #FFF,
        -1px 1px 0 #FFF;

}

.autocomplete{
    position: absolute;
  border-radius: 2px;
  border-top: 1px solid #d9d9d9;
  font-family: Arial, sans-serif;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  overflow: hidden;
  height:100px;
  background:white;
  list-style: none;
}

.autocomplete li{
    padding-left:1rem;
    color:#495057;
    font-size: 1rem;
}
.autocomplete li:hover{ 
    background-color: lightgray;
    cursor:pointer;
}


.section-title {
    font-size:2rem;
    text-align: center !important;
    font-weight: bold !important;

}

.loc {
    background: url("./img/waiting_1.jpeg") center no-repeat !important;
    background-size: cover;
}

.loc .wrapper {
    background-color: rgba(255, 255, 255, .8);
}


.loc,
.reservation {
    background-color: #f5f5f5;
}

.loc button,
.btn-primary:hover,
.btn-primary:not(:disabled):not(.disabled).active,
.btn-primary:not(:disabled):not(.disabled):active,
.show>.btn-primary.dropdown-toggle {
    background-color: #d32323;
    border-color: #d32323;
}

.loc a.btn,
#reserveBtn {
    background-color: #29445B;
    border-color: #29445B;
}

#updateWait {
    background-color: #d32323;
    border-color: #d32323;
}

.loc .form-control {
    height: 3rem;
}

.loc .jumbotron button {
    margin-top: 0rem;
    margin-left: 1.5rem;
    margin-right: 1.5rem;
    margin-bottom: 1.5rem;
}

.loc .jumbotron input {
    margin-top: 1.5rem;
    margin-left: 1.5rem;
    margin-right: 1.5rem;
    margin-bottom: 1rem;
}

.card-body,
footer .container {
    padding: 0;
}

.loc .display-4 {
    font-size: 3rem;
}

.map h4,
.reservation form h4 {
    text-align: center;
    margin-top: 1.4rem;
}

.reservation form {
    width: 100%;
}

.btn-dark .fa,
.btn-dark .fas,
.btn-dark .far {
    color: white;
}

a.btn-dark {
    color: white !important;
}

#restaurant {
    padding: 0 !important;
}

.no-reserve,
.reserve-success,.reserve-update {
    text-align: center;

}

#waitView .card {
    height: 30rem;
    overflow: scroll;
    overflow-y: scroll;
    -webkit-overflow-scrolling: touch;
    padding-left: 11px;
}

.map .btn-dark:active,
.map .btn-dark:hover {
    background-color: #29445B !important;
    border-color: #29445B !important;
}

.waitTimeTable {
    color: #29445B;
}

.waitTimeTable tr,
.waitTimeTable th {
    height: 3rem;
    width: 50rem;
}



.waitTimeTable td,
.waitTimeTable th {
    padding-left: 1rem;
    padding-right: 1rem;

}

.waitTimeTable tbody tr td:nth-child(even) span {
    padding-top: 1rem;
    margin-right: 1rem;
}


.waitTimeTable tbody tr:hover {
    background-color: beige;
    transition: 0.5s ease;
}


.footer {
    height: 100px;
    overflow: hidden;
}

.copyright {
    width: 100vw;
    margin: 0;
}

.copyright ul li a {
    text-decoration: none;
    color: inherit;
    font-size: 1.5rem;
}

.copyright:before {
    position: absolute;
    content: "";
    left: 0;
    right: 0;
    max-height: 100px;
    height: 100px;
    overflow: hidden;
    background: url("./img/copyright.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    filter: blur(3px);
}

.copyright p,
.copyright ul {
    text-align: center;
    margin: 0;
    color: white;
}

.copyright ul,
.copyright li {
    list-style: none;
    display: inline;
}

.mapBox {
    height: 30rem;
}

.marker ,.mapMarker{
    cursor:pointer;
}

.mapMarker{
    color: crimson;
    font-family: 'Courier New', Courier, monospace;
    font-weight: 700;
}

.mapMarker:hover{
    text-decoration: underline;
}


footer .container {
    margin-left: 0;
    margin-right: 0;
}

#restBody {
    display: flex;
}

#restPictures{
    display: flex;
    align-items: center;
    justify-content: flex-end;
    flex-wrap: wrap;
}

#restPics img {
    height: 220px;
    margin: 20px;

    box-shadow: 6px 6px 5px grey;
}

#aboutRestName {

    font-weight: bold;
    font-size: 40px;
    color: darkred;
    
    background-color: beige;
    box-shadow: 0 7px 10px rgba(0, 0, 0, 0.25), 0 5px 5px rgba(0, 0, 0, 0.22);
    
}

#restBody h4 {
    font-weight: 700;
}

#cuisine {
    font-size: 20px;
    padding: 0;
}

#aboutRestPage h2, #aboutRestPage h4, #restBody {
    padding: 10px;
}

#aboutRestPage{
    background-color: rgba(207, 200, 160, 0.226);
}
#reviews h2 {
    font-weight:700;
    font-size: 20px;
}

#reviews {
    padding: 10px;
    background-color: lightyellow;
}

.review h3 {
    padding-left: 20px;
    font-size: 15px;
}

.reviewDesc{
    font-size:13px;
    padding: 5px;
    margin:0;
}

.navbar-brand{
    font-size:1rem;
}



.button-group ul{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    padding-inline-start: 0px;
    margin-left:12%;
    margin-right:12%;
    margin-bottom:0px;
}

.button-group ul li{
    display: block;
    width: 100%;
    margin: 3px;
}



#locateme{
    width: 50%;
    margin: 0 auto 2%;
}


#search_place{

    margin: 0 10% 0 10% !important;
}



#searchLoc{
    margin: 0 10% 0 10% !important;
    height: 48px !important;
}
.loc .wrapper h4{
    width: 100%;
    margin: 0 auto;
}

#log-in{
    margin: 3px 15px 3px 0px;
    padding: 4px 0;
}
#username{
    margin: 3px auto 3px auto;
    display: inline;
}
#username p{
    text-align: center;
    display: inline;
}
#logged-in-pane{
    background-color: lightgray;
    border-radius: 10px;
    display: inline-block;
    margin: 3px auto 3px 0px;
    padding: 4px 20px;
    
}

#log-out{
    margin: 0 auto 10px 15px;
    text-align: center;
    display: inline;
}

#about-bg{
    background-color: rgba(207, 200, 160, 0.226);
}

.headername{
    display: table;
    margin: 0 auto;
    font-weight: 900;
    padding: 15px 0 10px 0;
}
/* ... */

